<resources>
    <string name="app_name">Teman Usaha Partner</string>
    <string name="nothing"> </string>
    <string name="login">Login</string>
    <string name="username_or_email">username/email</string>
    <string name="password">password</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="term_of_service">Term of Service</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="application_and_status">Application \nStatus</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="id_card_number">ID Card Number</string>
    <string name="expired_id_date">Expired ID Date</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="minimum_two_char_error">This field should be filled with at least 2 characters</string>
    <string name="should_not_be_empty_error">This field should not be empty</string>
    <string name="email_validation_error">Please enter a valid email</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_status">Please select status</string>
    <string name="get_loan">Get Loan</string>
    <string name="choose_one_shape">Pilih salah satu gambar di bawah ini yang paling anda sukai</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="sejak_tahun">Sejak tahun</string>
    <string name="jabatan">Jabatan</string>
    <string name="gaji_perbulan">Gaji Perbulan</string>
    <string name="biaya_pendidikan_perbulan">Biaya Pendidikan Perbulan</string>
    <string name="biaya_rumah_tangga_perbulan">Biaya Rumah Tangga Perbulan</string>
    <string name="biaya_transport_perbulan">Biaya Transport Perbulan</string>
    <string name="biaya_listrik_dan_air">Biaya Listrik dan Air</string>
    <string name="biaya_lain_lain">Biaya Lain-lain</string>
    <string name="informasi_keuangan">Informasi Keuangan</string>
    <string name="kas_atau_dana_yang_dipegang_saat_ini">Kas / Dana yang Dipegang Saat Ini</string>
    <string name="tabungan_atau_simpanan">Tabungan / Simpanan</string>
    <string name="total_persediaan_barang">Total (Rp) Persediaan Barang</string>
    <string name="total_kendaraan_yang_dimiliki">Total (Rp) Kendaraan yang Dimiliki</string>
    <string name="total_rumah_dan_tanah_yang_dimiliki">Total (Rp) Rumah dan Tanah yang Dimiliki</string>
    <string name="total_alat_usaha">Total (Rp) Alat Usaha</string>
    <string name="total_barang_berharga_lainnya">Total (Rp) Barang Berharga Lainnya</string>
    <string name="total_piutang">Total (Rp) Piutang</string>
    <string name="total_hutang_bank_dagang">Total (Rp) Hutang Bank/Dagang</string>
    <string name="segmentasi_kredit">Segmentasi Kredit</string>
    <string name="plafon_kredit">Plafon Kredit</string>
    <string name="jangka_waktu">Jangka Waktu</string>
    <string name="kredit_modal_usaha">Kredit Modal Usaha</string>
    <string name="kredit_investasi">Kredit Investasi</string>
    <string name="kredit_konsumtif">Kredit Konsumtif</string>
    <string name="kredit_mobil">Kredit Mobil</string>
    <string name="kredit_sepeda_motor">Kredit Sepeda Motor</string>
    <string name="kredit_pegawai">Kredit Pegawai</string>
    <string name="kpr">KPR</string>
    <string name="ceiling_1">0-1 Juta</string>
    <string name="ceiling_2">1-5 Juta</string>
    <string name="ceiling_3">5-10 Juta</string>
    <string name="ceiling_4">10-25 Juta</string>
    <string name="ceiling_5">25-50 Juta</string>
    <string name="ceiling_6">50-100 Juta</string>
    <string name="ceiling_7">100-250 Juta</string>
    <string name="ceiling_8">250-500 Juta</string>
    <string name="ceiling_9">500 Juta - 1 Milyar</string>
    <string name="ceiling_10"><![CDATA[> 1 Milyar]]></string>
    <string name="time_range_1">0-1 Tahun</string>
    <string name="time_range_2">1-2 Tahun</string>
    <string name="time_range_3">2-3 Tahun</string>
    <string name="time_range_4">3-5 Tahun</string>
    <string name="time_range_5">5-10 Tahun</string>
    <string name="time_range_6"><![CDATA[> 10 Tahun]]></string>
    <string name="next">Next</string>
    <string name="wait_for_grabber_text">Your application has been sent please wait for a few minute until your application to grab by partner</string>
    <string name="default_count_down_timer">09 : 50</string>
    <string name="cancel">Cancel</string>
    <string name="your_loan_will_be_processed_by">Your loan application will be processed by</string>
    <string name="default_partner_name">Jose Mourinho</string>
    <string name="default_pt_name">PT. Satria Cipta Solusi</string>
    <string name="default_kcp_name">KCP Cihampelas</string>
    <string name="default_pt_strength">Proses ACC cepat, kredit murah, jangka waktu flexible</string>
    <string name="your_loan_app_has_been_sent">Your loan application has been sent</string>
    <string name="app_will_be_verified">Application will be verified \nCheck application status</string>
    <string name="default_app_status">Administration Process</string>
    <string name="application_status">Application Status</string>
    <string name="administration_process">Administration Process</string>
    <string name="meet_up_process">Meet Up Process</string>
    <string name="waiting_for_approval">Waiting for Approval</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="please_wait_up_to_date">Please Wait \nUp to Date</string>
    <string name="default_date">27 Agustus 2015</string>
    <string name="please_wait_on">Please Wait \nOn</string>
    <string-array name="set_picture_item">
        <item>Browse Image from Library</item>
        <item>Take Picture</item>
    </string-array>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcm_defaultSenderId">767072238494</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register to GCM</string>
    <string name="push">Push Notification</string>
    <string name="congratulation">Congratulation</string>
    <string name="app_approved">Your application \nhas been approved</string>
    <string name="on">ON</string>
    <string name="OK">OK</string>
    <string name="sorry">Sorry!!</string>
    <string name="app_rejected">Your application \nhas been rejected</string>
    <string name="please_submit_app_again">Please submit \nyour application again</string>
    <string name="partner">Partner</string>
    <string name="customer">Customer</string>
    <string name="input_email_and_password">Masukkan email dan password!</string>
    <string name="login_succeed_text">You have successfully logged in</string>
    <string name="login_failed_text">Username and password didn\'t match</string>
    <string name="please_wait">Please wait…</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="kantor_cabang">Kantor Cabang</string>
    <string name="segment_loan">Segment Loan</string>
    <string name="hundred_million_limit">0–100 Juta</string>
    <string name="more_than_hundred_million"><![CDATA[> 100 Juta]]></string>
    <string name="company_strength">Tuliskan kelebihan anda/perusahaan anda dibandingkan dengan rekan/perusahaan lainnya yang sejenis</string>
    <string name="common_error_msg">Something went wrong</string>
    <string name="name">Name</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password_not_matched">Your confirmation password is not matched</string>
    <string name="succeed">Succeed!</string>
    <string name="failed">Failed!</string>
    <string name="null_picture_error">Please provide profile picture</string>
    <string name="alamat_perusahaan">Alamat Perusahaan</string>
    <string name="omzet_perbulan">Omzet Perbulan</string>
    <string name="harga_pokok_pembelian">Harga Pokok Pembelian/Modal Perbulan</string>
    <string name="upah_tenaga_kerja">Upah Tenaga Kerja</string>
    <string name="karyawan">Karyawan</string>
    <string name="wiraswasta">Wiraswasta</string>
    <string name="RTO">Request Timed Out</string>
    <string name="SERVER_ERROR">Server Error</string>
    <string name="profile_updated">Your profile has successfully updated</string>
    <string name="location_error">Cannot find your location</string>
    <string name="no_correspondent_loan_type">Couldn\'t find partners based on your loan type</string>
    <string name="your_location">Your Location</string>
    <string name="send">Send</string>
    <string name="cancelled">Cancelled</string>
    <string name="confirmed">Confirmed</string>
    <string name="password_incorrect">Your password is incorrect</string>
    <string name="password_not_matched">Password is not matched</string>
    <string name="logout_confirmation_msg">Are you sure want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_will_be_sent">An email will be sent to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="at">at</string>
    <string name="default_venue">Jalan Raya Tanjungsari no. 399 kec. Tanjungsari, kab. Sumedang</string>
    <string name="partner_panel">Partner Panel</string>
    <string name="kebutuhan_kredit">Kebutuhan Kredit</string>
    <string name="waiting_for_confirmation">Waiting for confirmation</string>
    <string name="set_a_meeting">Set a Meeting</string>
    <string name="set_up_meeting_appointment">Set up meeting appointment</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="submit">Submit</string>
    <string name="please_provide_a_valid_venue">please_provide_a_valid_venue</string>
    <string name="notes">notes</string>
    <string name="succed_make_appointment">You have set up meeting appointment</string>
    <string name="start_from">Start from</string>
    <string name="usia">Usia</string>
    <string name="cust_information_file">Customer Information File</string>
    <string name="waiting_for_process">Waiting for Process</string>
    <string name="process">Process</string>
    <string name="reject">Reject</string>
    <string name="apply_date">Apply date :</string>
    <string name="customer_has_cancelled_an_app">Customer has cancelled a loan application</string>
</resources>