<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent"
    android:background="@color/blue_app">

    <RelativeLayout
        style="@style/wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/nothing"
            android:src="@drawable/logo_white" />

        <LinearLayout
            style="@style/default_width_parent_matching"
            android:layout_below="@+id/logo_iv"
            android:orientation="vertical">

            <TextView
                style="@style/wrap_content"
                android:text="@string/partner_panel"
                android:layout_gravity="left"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/email_et"
                style="@style/default_edit_text_format"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_et"
                style="@style/default_edit_text_format"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/forgot_password_tv"
                style="@style/wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="right"
                android:textColor="@color/white"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/login_btn"
                style="@style/wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner_edittext"
                android:text="@string/login"
                android:textColor="@color/blue_app"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
