<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent"
    android:background="@color/blue_app">

    <RelativeLayout
        style="@style/wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/nothing"
            android:src="@drawable/logo_white" />

        <LinearLayout
            style="@style/default_width_parent_matching"
            android:layout_below="@+id/logo_iv"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/first_name_et"
                    style="@style/default_edit_text_format"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/last_name_et"
                    style="@style/default_edit_text_format"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </LinearLayout>


            <EditText
                android:id="@+id/email_et"
                style="@style/default_edit_text_format"
                android:hint="@string/username_or_email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/password_et"
                style="@style/default_edit_text_format"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_password_et"
                style="@style/default_edit_text_format"
                android:hint="@string/confirmation_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_up_btn"
                style="@style/wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner_edittext"
                android:text="@string/sign_up"
                android:textColor="@color/blue_app"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
