<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:showIn="@layout/customer_profile_layout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pekerjaan"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/job_position_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/employee_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/karyawan" />

            <RadioButton
                android:id="@+id/entrepreneur_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiraswasta" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/company_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nama_perusahaan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/company_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_perusahaan"
        android:inputType="text" />

    <TextView
        android:id="@+id/work_since_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sejak_tahun"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/work_since_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sejak_tahun"
        android:inputType="number" />

    <TextView
        android:id="@+id/company_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/alamat_perusahaan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/company_address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamat_perusahaan" />

    <TextView
        android:id="@+id/job_position_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jabatan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/job_position_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jabatan"
        android:inputType="text" />

    <TextView
        android:id="@+id/monthly_income_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/omzet_perbulan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/monthly_income_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/omzet_perbulan"
        android:inputType="number" />

    <TextView
        android:id="@+id/monthly_asset_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/harga_pokok_pembelian"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/monthly_asset_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/harga_pokok_pembelian"
        android:inputType="number" />

    <TextView
        android:id="@+id/employee_wage_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/upah_tenaga_kerja"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/employee_wage_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/upah_tenaga_kerja"
        android:inputType="number" />

    <TextView
        android:id="@+id/education_expenses_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/biaya_pendidikan_perbulan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/education_expenses_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biaya_pendidikan_perbulan"
        android:inputType="number" />

    <TextView
        android:id="@+id/household_expenses_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/biaya_rumah_tangga_perbulan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/household_expenses_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biaya_rumah_tangga_perbulan"
        android:inputType="number" />

    <TextView
        android:id="@+id/transport_expenses_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/biaya_transport_perbulan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/transport_expenses_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biaya_transport_perbulan"
        android:inputType="number" />

    <TextView
        android:id="@+id/water_and_electricy_expenses_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/biaya_listrik_dan_air"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/water_and_electricy_expenses_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biaya_listrik_dan_air"
        android:inputType="number" />

    <TextView
        android:id="@+id/misc_expenses_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/biaya_lain_lain"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/misc_expenses_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biaya_lain_lain"
        android:inputType="number" />

</LinearLayout>