<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:showIn="@layout/customer_profile_layout">

    <TextView
        style="@style/wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/informasi_keuangan"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/kas_atau_dana_yang_dipegang_saat_ini"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/kas_saat_ini_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kas_atau_dana_yang_dipegang_saat_ini"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tabungan_atau_simpanan"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tabungan_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tabungan_atau_simpanan"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_persediaan_barang"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/persediaan_barang_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_persediaan_barang"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_rumah_dan_tanah_yang_dimiliki"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rumah_tanah_yang_dimiliki_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_rumah_dan_tanah_yang_dimiliki"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_kendaraan_yang_dimiliki"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/kendaraan_yang_dimiliki_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_kendaraan_yang_dimiliki"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_alat_usaha"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/alat_usaha_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_alat_usaha"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_barang_berharga_lainnya"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/barang_berharga_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_barang_berharga_lainnya"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_piutang"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/piutang_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_piutang"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_hutang_bank_dagang"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hutang_bank_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_hutang_bank_dagang"
        android:inputType="number" />

</LinearLayout>